syntax="proto3";

package profile;

import "get_profile.proto";
import "update_profile_data.proto";
import "update_profile_avatar.proto";

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/profile_grpc";

service Profile {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);

  rpc UpdateProfileData(UpdateProfileDataRequest) returns (UpdateProfileDataResponse);

  rpc UpdateProfileAvatar(UpdateAvatarRequest) returns (UpdateAvatarResponse);
}