syntax="proto3";

package profile;

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/profile_grpc";


message UpdateProfileDataRequest {
  uint32 user_id = 1;
  string email = 2;
  string username = 3;
  string gender = 4;
}

message UpdateProfileDataResponse {
  string email = 1;
  string username = 2;
  string gender = 3;
}
